# MyHomework

./: File  git.txt  hello.sh
cpp/DataStructure/: graph.cpp  main.cpp  stake.cpp  tree.cpp
cpp/day1/: main.cpp
cpp/day2/: index.cpp  main.cpp
cpp/day3/: index.cpp
cpp/dev-tools/: factorial.cpp
cpp/dev-tools/home_work_calc/: CMakeLists.txt
cpp/dev-tools/home_work_calc/include/: mul.h
cpp/dev-tools/home_work_calc/mul/: CMakeLists.txt
cpp/dev-tools/home_work_calc/mul/include/: mul.h
cpp/dev-tools/home_work_calc/mul/src/: mul.cpp
cpp/dev-tools/home_work_calc/sep/: CMakeLists.txt
cpp/dev-tools/home_work_calc/sep/include/: sep.h
cpp/dev-tools/home_work_calc/sep/src/: sep.cpp
cpp/dev-tools/home_work_calc/src/: main.cpp
cpp/dev-tools/home_work_calc/sub/: CMakeLists.txt
cpp/dev-tools/home_work_calc/sub/include/: sub.h
cpp/dev-tools/home_work_calc/sub/src/: sub.cpp
cpp/dev-tools/home_work_calc/sum/: CMakeLists.txt
cpp/dev-tools/make/: Makefile  myprogram
cpp/dev-tools/make/include/: .functions.h.swp  functions.h
cpp/dev-tools/make/src/: functions.cpp  main.cpp
cpp/dev-tools/vector/: CMakeLists.txt
cpp/dev-tools/vector/include/: vector.h
cpp/dev-tools/vector/src/: main.cpp  vector.cpp
